--- a/test.html
+++ b/test.html
@@ -15,17 +15,17 @@
 <title>profile: @samafeald</title>
 <meta name="description" content="samafealdのプロフィールページです。">
 
-<script src="https://website.koreis-labo.com/_js/com/log.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/path.js"></script>
+<script src="_js/com/log.js"></script>
+<script src="_js/com/path.js"></script>
 
-<script src="https://website.koreis-labo.com/_js/com/time.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/timer_ctrl.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/pageobj.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/math.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/window_ctrl.js"></script>
+<script src="_js/com/time.js"></script>
+<script src="_js/com/timer_ctrl.js"></script>
+<script src="_js/com/pageobj.js"></script>
+<script src="_js/com/math.js"></script>
+<script src="_js/com/window_ctrl.js"></script>
 
-<script src="https://website.koreis-labo.com/_js/global.js"></script>
-<script src="https://website.koreis-labo.com/_js/_handle_samafeald.js"></script>
+<script src="_js/global.js"></script>
+<script src="_js/_handle_samafeald.js"></script>
 
 </head><body onLoad="__handle_PageLoad()"><div id="com_bodyOutline"><div id="com_bodyInline">
 
@@ -108,7 +108,7 @@
 	<!-- ***アイコン*** -->
 	<tr>
 	<td class="com_Center" colspan="2"><a class="Icon" target="_blank" href="https://twitter.com/samafeald" title="Twitter">
-		<img src="https://website.koreis-labo.com//_pic/profile/icon_mini_1000.jpg" alt="Profile Picture" />
+		<img src="../_pic/profile/icon_mini_1000.jpg" alt="Profile Picture" />
 		</a></td>
 	</tr>
 
@@ -257,7 +257,7 @@
 
 	<tr>
 	<td class="com_Center"><a class="Icon" target="_blank" href="https://website.koreis-labo.com/profile/korei_xlix.htm" title="これーアカウント（@korei_xlix）">
-		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0001.jpg" alt="Profile Picture" />
+		<img src="../_pic/profile/icon_mini_0001.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
 		これーアカウント（@korei_xlix）
@@ -266,7 +266,7 @@
 
 	<tr>
 	<td class="com_Center"><a class="Icon" target="_blank" href="https://misskey.io/@samafeald" title="misskey bot">
-		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_1001.jpg" alt="Profile Picture" />
+		<img src="../_pic/profile/icon_mini_1001.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
 		misskey bot
@@ -275,7 +275,7 @@
 
 	<tr>
 	<td class="com_Center"><a class="Icon" target="_blank" href="https://twitter.com/galaxy_fleet" title="Galaxy Fleetアカウント">
-		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0006.jpg" alt="Profile Picture" />
+		<img src="../_pic/profile/icon_mini_0006.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
 		Galaxy Fleetアカウント（非公開）
