プロフィール更新
・求めるフォロワーを追記。

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-06-01
+				LAST UPDATE：	2023-06-07
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -137,6 +137,18 @@
 なにかあればtwitterなり、githubのissueなどを使ってください。<br />
 （やり方はreadmeに書いてあります）<br />
 <br />
+
+こういう方を募集してます。<br />
+<ul>
+	<li>サーバ管理者（web、DB、ゲームなんでも）<br />
+		</li>
+
+	<li>python、javascript使ってる人<br />
+		</li>
+
+	<li>c++開発やってる人<br />
+		</li>
+</ul>
 
 <div class="Caution">フォロー、リムーブはご自由に。挨拶は不必要です</div>
 <p>
