プロフィール更新

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-06-07
+				LAST UPDATE：	2023-07-12
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -253,6 +253,16 @@
 <p>
 	<a target="_blank" href="https://github.com/samafeald">[[Samafeald's github]]</a><br />
 ※こっちは使ってない自リポジトリ。<br />
+</p>
+
+<div class="Caution">その他：わたしの置かれてる状況</div>
+<p>
+現在、腎機能の低下（末期の腎不全）と診断され、尿毒症により歩行が困難な状況になってます。<br />
+透析の準備をしてまして（シャントは受けました）、近い将来透析ができる運びになってます。<br />
+それまでは日常生活にかなり負担になっており、webの更新などにも支障がでると思います。<br />
+また入院期間中はwebの更新が止まります。<br />
+同時に korei_xlix の更新も"なぜか"止まります。（アズレンくらいはできるかな？ Twitterはできるかも）<br />
+
 </p>
 
 	</td>
