アカウント追加
・Instagramアカウント追加。

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-07-12
+				LAST UPDATE：	2023-08-13
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -283,6 +283,15 @@
 		</a></td>
 	<td>
 		これーアカウント（@korei_xlix）
+		</td>
+	</tr>
+
+	<tr>
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://www.instagram.com/korei.xlix/" title="Instagramアカウント">
+		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0011.jpg" alt="Instagramアカウント" />
+		</a></td>
+	<td>
+		Instagram(samafeald)
 		</td>
 	</tr>
 
