--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-13
+				LAST UPDATE：	2023-08-14
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -152,10 +152,28 @@
 
 <div class="Caution">フォロー、リムーブはご自由に。挨拶は不必要です</div>
 <p>
-トラブル回避のために運用ルールに基づいて運用してます。
+トラブル回避のために運用ルールに基づいて運用してます。<br />
+<br />
+基本的な運用方針：
 </p>
+<ul>
+	<li>フォロー・リムーブは自由<br />
+	</li>
+
+	<li>リアクションなければ数日で蹴る(相互以外)<br />
+	</li>
+
+	<li>リストフォローは禁止<br />
+	</li>
+
+	<li>スパマーのフォローは通報の上蹴る<br />
+		　→いいね等は放置。リンク踏みは自己責任で。<br />
+	</li>
+
+</ul>
 
 <p>
+詳細な運用方針はこちら　
 <a target="_blank" href="https://website.koreis-labo.com/rules/rule_twitter.htm">
 [Twitter運用方針]</a>
 </p>
