プロフィール更新
・インスタのURL誤りを是正した。

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
 	</tr>
 
 	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://www.instagram.com/korei.xlix/" title="Instagramアカウント">
-		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0011.jpg" alt="Instagramアカウント" />
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://www.instagram.com/samafeald/" title="Instagramアカウント">
+		<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0011.jpg" alt="Instagramアカウント" />
 		</a></td>
 	<td>
 		Instagram(samafeald)
