プロフィール更新
・わたしの現状更新。

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-14
+				LAST UPDATE：	2023-08-19
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -275,11 +275,15 @@
 
 <div class="Caution">その他：わたしの置かれてる状況</div>
 <p>
-現在、腎機能の低下（末期の腎不全）と診断され、尿毒症により歩行が困難な状況になってます。<br />
-透析の準備をしてまして（シャントは受けました）、近い将来透析ができる運びになってます。<br />
-それまでは日常生活にかなり負担になっており、webの更新などにも支障がでると思います。<br />
-また入院期間中はwebの更新が止まります。<br />
-同時に korei_xlix の更新も"なぜか"止まります。（アズレンくらいはできるかな？ Twitterはできるかも）<br />
+現在、腎機能の低下（末期の腎不全）と診断され、3週間の入院をし、透析を受けています。<br />
+現在はやや復調し、日常生活にはほぼ影響はないですが、
+歩行や階段の登り降りが普通の人より遥かに遅く、杖をついています。<br />
+お医者からは「障害者認定1級」と診断され、障害者手帳を申請しています。<br />
+<br />
+いちお8/12の退院から必要な手続きや、家のことはできたので、活動としては元に戻れると思います。<br />
+korei_xlix の更新も"なぜか"再開されます。<br />
+<br />
+これからも Korei とともによろしくなー。<br />
 
 </p>
 
