プロフィール更新
・Twitter → Xに移行。
（ソース部分は後に移行予定）
・Xプロフィールにその他のアカウントの扱いを追記。

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-19
+				LAST UPDATE：	2023-08-20
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -70,8 +70,8 @@
 		<span class="com_Menu_Select">
 		【@samafeald】</span>
 
-		<a class="com_Menu_Cel" target="_blank" title="Twitter" href="https://twitter.com/samafeald">
-		[Twitter]</a>
+		<a class="com_Menu_Cel" target="_blank" title="X" href="https://twitter.com/samafeald">
+		[X]</a>
 
 	</div>
 
@@ -93,8 +93,8 @@
 <a name="aMain" class="com_AnchorTag"></a>
 <main class="com_ContentsSection_Center">
 	<div class="com_ContentsTitle">
-		<a class="com_ContentsTitle_Bunner" target="_blank" href="https://twitter.com/samafeald" title="Twitter">
-		開発者アカウント @samafeald
+		<a class="com_ContentsTitle_Bunner" target="_blank" href="https://twitter.com/samafeald" title="X">
+		@samafeald
 		</a></div>
 
 	<div class="com_ContentsBody_Center">
@@ -107,7 +107,7 @@
 
 	<!-- ***アイコン*** -->
 	<tr>
-	<td class="com_Center" colspan="2"><a class="Icon" target="_blank" href="https://twitter.com/samafeald" title="Twitter">
+	<td class="com_Center" colspan="2"><a class="Icon" target="_blank" href="https://twitter.com/samafeald" title="X">
 		<img src="https://website.koreis-labo.com//_pic/profile/icon_mini_1000.jpg" alt="Profile Picture" />
 		</a></td>
 	</tr>
@@ -150,7 +150,7 @@
 		</li>
 </ul>
 
-<div class="Caution">フォロー、リムーブはご自由に。挨拶は不必要です</div>
+<div class="Caution">X のフォロー、リムーブはご自由に。挨拶は不必要です</div>
 <p>
 トラブル回避のために運用ルールに基づいて運用してます。<br />
 <br />
@@ -189,6 +189,25 @@
 	</td>
 	</tr>
 
+
+	<!-- ***X 以外のアカウントについて*** -->
+	<tr>
+	<td colspan="2">
+		<div class="com_ContentsTitle">X以外のアカウントについて</div>
+
+<p>
+Xのフォローをお願いします。<br />
+X以外のアカウントに送られたメッセージなどはスルーされます。<br />
+感想、メッセージなどはXに送ってください。<br />
+マシュマロもご利用できます。<br />
+その他の用方針（フォロー、スパムの扱いなど）は運用方針に準拠します。<br />
+（連絡先、X運用方針は上記「Xのアカウントについて」に記載しています）<br />
+<br />
+githubについては、下のほうに記載してます。<br />
+</p>
+
+	</td>
+	</tr>
 
 
 	<!-- ***Twitterタグ*** -->
@@ -265,7 +284,7 @@
 <p>
 	<a target="_blank" href="https://github.com/korei-xlix">[[Korei's github]]</a><br />
 ※管理側アカウント<br />
-※利用規約はreadmeに記載してるよ。<br />
+※利用規約はreadmeに記載してるので、そちらに準拠してください。<br />
 </p>
 
 <p>
@@ -327,11 +346,11 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 	</tr>
 
 	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://twitter.com/galaxy_fleet" title="Galaxy Fleetアカウント">
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://twitter.com/galaxy_fleet" title="Galaxy Fleet (開発中)">
 		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0006.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
-		Galaxy Fleetアカウント（非公開）
+		Galaxy Fleetアカウント（開発中）
 		</td>
 	</tr>
 
@@ -359,8 +378,8 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 	<a class="com_Menu_Cel" target="_blank" title="Web Page" href="https://website.koreis-labo.com/">
 	[Web Page]</a>
 
-	<a class="com_Menu_Cel" target="_blank" title="for auther Twitter" href="https://twitter.com/korei_xlix">
-	[Twitter]</a>
+	<a class="com_Menu_Cel" target="_blank" title="for auther X" href="https://twitter.com/korei_xlix">
+	[X]</a>
 
 	</div>
 
@@ -405,8 +424,8 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 		</div>
 
 		<div class="com_Menu_TwitterFT">
-			<address>Twitter(auther): 
-			<a class="com_Menu_TwitterFT" target="_blank" title="for Twitter" href="https://twitter.com/korei_xlix">
+			<address>X (auther): 
+			<a class="com_Menu_TwitterFT" target="_blank" title="for X" href="https://twitter.com/korei_xlix">
 			korei_xlix@twitter.com</a></address>
 		</div>
 
