プロフィール修正
・いいねで終わる腰抜け用。

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-20
+				LAST UPDATE：	2023-08-22
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -152,6 +152,8 @@
 
 <div class="Caution">X のフォロー、リムーブはご自由に。挨拶は不必要です</div>
 <p>
+基本的にいいねしたらフォローしろ！少しでも気に入ったということだよな？<br />
+<br />
 トラブル回避のために運用ルールに基づいて運用してます。<br />
 <br />
 基本的な運用方針：
