プロフィール修正
・Korei側のフォーマットと合わせた。

--- a/index.html
+++ b/index.html
@@ -122,15 +122,25 @@
 	<td colspan="2">
 		<div class="com_ContentsTitle">アカウントについて</div>
 
+<div class="Caution">自己紹介</div>
+<p>
 これーに頼まれて（殴られて）サポートになりました。<br />
 主にサーバの管理、github側のファイル更新、webページの監視管理、これから作るゲームの開発を手伝います。<br />
-足腰が悪くて現在杖ついてます。<br />
-<br />
+</p>
 
+<p>
+Korei's Laboの管理をおこなってます。<br />
+<a class="com_Menu_Cel" target="_blank" title="Web Page" href="https://website.koreis-labo.com/">
+[Korei's Labo]</a>
+</p>
+
+<p>
 なおSNSがクソ嫌いです。<br />
 これーの「サーバとかソースをいじれ」という指令で、連絡手段として嫌々SNS登録したほどSNS嫌いです。<br />
 これーとの連絡用にtwitterを取らさ...取りました。<br />
-  
+</p>
+
+
 
 <div class="Caution">技術者仲間とかフォロー求めます</div>
 とくにpythonやJavaScript、Webサーバ系での情報交換などできたら。<br />
@@ -150,11 +160,13 @@
 		</li>
 </ul>
 
-<div class="Caution">X のフォロー、リムーブはご自由に。挨拶は不必要です</div>
+
+
+<div class="Caution">X (旧Twitter)アカウントへの注意事項</div>
 <p>
-基本的にいいねしたらフォローしろ！少しでも気に入ったということだよな？<br />
-<br />
-トラブル回避のために運用ルールに基づいて運用してます。<br />
+フォロー、リムーブはご自由に。挨拶は不必要です。<br />
+非フォロワーの方でいいねしたら、フォローしてください。<br />
+その他、トラブル回避のために運用ルールに基づいて運用してます。<br />
 <br />
 基本的な運用方針：
 </p>
@@ -162,50 +174,67 @@
 	<li>フォロー・リムーブは自由<br />
 	</li>
 
-	<li>リアクションなければ数日で蹴る(相互以外)<br />
-	</li>
-
 	<li>リストフォローは禁止<br />
 	</li>
 
-	<li>スパマーのフォローは通報の上蹴る<br />
-		　→いいね等は放置。リンク踏みは自己責任で。<br />
+	<li>リプライはOK<br />
+		（リプライ、DM、引用リツイートの注意事項あり）<br />
+	</li>
+
+	<li>いいねしたらフォローをお願い<br />
+	</li>
+
+	<li>スパムは放置<br />
+		→リンク踏んでも当方は責任を負わない<br />
 	</li>
 
 </ul>
 
 <p>
 詳細な運用方針はこちら　
-<a target="_blank" href="https://website.koreis-labo.com/rules/rule_twitter.htm">
-[Twitter運用方針]</a>
+<a target="_blank" href="../rules/rule_twitter.htm">
+[X運用方針]</a>
 </p>
+
 <p>
 フォローされた場合、以上にご同意いただけたとみなします。<br />
 </p>
 
 <p>
-リプライ、DM、引用リツイートの送り方についてもTwitter運用方針に記載してます。
-感想、メッセージなど送ってください。
+リプライが苦手、確実に連絡が欲しい場合、匿名のメッセージはマシュマロに送ってください。<br />
+<a target="_blank" href="../rules/address.htm">
+[連絡先（Address）]</a>
 </p>
 
 	</td>
 	</tr>
 
 
+
 	<!-- ***X 以外のアカウントについて*** -->
 	<tr>
 	<td colspan="2">
-		<div class="com_ContentsTitle">X以外のアカウントについて</div>
+		<div class="com_ContentsTitle">X (旧Twitter)以外のアカウントについて</div>
 
 <p>
-Xのフォローをお願いします。<br />
-X以外のアカウントに送られたメッセージなどはスルーされます。<br />
-感想、メッセージなどはXに送ってください。<br />
-マシュマロもご利用できます。<br />
-その他の用方針（フォロー、スパムの扱いなど）は運用方針に準拠します。<br />
-（連絡先、X運用方針は上記「Xのアカウントについて」に記載しています）<br />
+X (旧Twitter)以外のアカウントに送られたメッセージなどはスルーされます。<br />
+X (旧Twitter)のフォローをお願いします。<br />
 <br />
-githubについては、下のほうに記載してます。<br />
+感想、メッセージなどはXに送ってください。<br />
+その他、運用方針（フォロー、スパムの扱いなど）はX (旧Twitter)の運用方針に準拠します。<br />
+（連絡先、X運用方針は上記「Xのアカウントについて」に記載しています）<br />
+</p>
+
+<p>
+githubリポジトリ<br />
+<a target="_blank" href="https://github.com/korei-xlix">[[Korei's github]]</a><br />
+※管理側アカウント<br />
+※利用規約はreadmeに記載してるので、そちらに準拠してください。<br />
+</p>
+
+<p>
+こっちは使ってない自リポジトリ。<br />
+<a target="_blank" href="https://github.com/samafeald">[[Samafeald's github]]</a><br />
 </p>
 
 	</td>
@@ -218,16 +247,20 @@ githubについては、下のほうに記載してます。<br />
 		<div class="com_ContentsTitle">Twitterタグ</div>
 
 	<ul>
+	<li><a target="_blank" href="https://twitter.com/hashtag/samafeald?src=hashtag_click">#samafeald</a>
+		☆ハイライト用
+		</li>
+
 	<li><a target="_blank" href="https://twitter.com/hashtag/korei_web?src=hashtag_click">#korei_web</a>
 		☆Web、アカウント運用、お知らせ
 		</li>
 
 	<li><a target="_blank" href="https://twitter.com/hashtag/korei_dev?src=hashtag_click">#korei_dev</a>
-		開発用
+		☆開発用
 		</li>
 
-	<li><a target="_blank" href="https://twitter.com/hashtag/galaxy_fleet?src=hashtag_click">#korei_fleet</a>
-		Galaxy Fleet関係
+	<li><a target="_blank" href="https://twitter.com/hashtag/galaxy_fleet?src=hashtag_click">#galaxy_fleet</a>
+		Galaxy Fleetの広報、お知らせツイート
 		</li>
 
 	<li><a target="_blank" href="https://twitter.com/search?q=%23korei_del&src=typed_query">#korei_del</a>
@@ -282,17 +315,7 @@ githubについては、下のほうに記載してます。<br />
 		</li>
 	</ul>
 
-<div class="Caution">githubページ</div>
-<p>
-	<a target="_blank" href="https://github.com/korei-xlix">[[Korei's github]]</a><br />
-※管理側アカウント<br />
-※利用規約はreadmeに記載してるので、そちらに準拠してください。<br />
-</p>
 
-<p>
-	<a target="_blank" href="https://github.com/samafeald">[[Samafeald's github]]</a><br />
-※こっちは使ってない自リポジトリ。<br />
-</p>
 
 <div class="Caution">その他：わたしの置かれてる状況</div>
 <p>
@@ -378,10 +401,10 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 
 	<div class="com_Menu">
 	<a class="com_Menu_Cel" target="_blank" title="Web Page" href="https://website.koreis-labo.com/">
-	[Web Page]</a>
+	[Korei's Labo]</a>
 
 	<a class="com_Menu_Cel" target="_blank" title="for auther X" href="https://twitter.com/korei_xlix">
-	[X]</a>
+	[X (Korei)]</a>
 
 	</div>
 
