連絡先の更新

--- a/index.html
+++ b/index.html
@@ -263,7 +263,11 @@ githubリポジトリ<br />
 		Galaxy Fleetの広報、お知らせツイート
 		</li>
 
-	<li><a target="_blank" href="https://twitter.com/search?q=%23korei_del&src=typed_query">#korei_del</a>
+	<li><a target="_blank" href="https://twitter.com/hashtag/sama_rep?src=hashtag_click">#sama_rep</a>
+		★リプライ（後で消すかも）
+		</li>
+
+	<li><a target="_blank" href="https://twitter.com/hashtag/sama_del?src=hashtag_click">#sama_del</a>
 		★あとで消すツイート
 		</li>
 
@@ -438,7 +442,7 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 			<div class="com_Menu_Cel com_Menu_Github"><a class="com_Menu_Cel com_Menu_Github"  target="_blank" title="開発Github (for Github)" href="https://github.com/korei-xlix">
 			Github</a></div>
 
-			<div class="com_Menu_Cel com_Menu_Address"><a class="com_Menu_Cel com_Menu_Address"  target="_blank" title="連絡先（for Address）" href="https://website.koreis-labo.com/rules/address.htm">
+			<div class="com_Menu_Cel com_Menu_Address"><a class="com_Menu_Cel com_Menu_Address"  target="_blank" title="連絡先（for Address）" href="address.htm">
 			Address</a></div>
 
 			<div class="com_Menu_Cel com_Menu_Warnlist"><a class="com_Menu_Cel com_Menu_Warnlist" target="_blank" title="警告リスト（warn list）" href="https://github.com/korei-xlix/warnlists/blob/main/list_twitter.md">
