--- a/address.htm
+++ b/address.htm
@@ -15,17 +15,17 @@
 <title>連絡先</title>
 <meta name="description" content="samafealdの連絡先です。">
 
-<script src="../_js/com/log.js"></script>
-<script src="../_js/com/path.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/log.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/path.js"></script>
 
-<script src="../_js/com/time.js"></script>
-<script src="../_js/com/timer_ctrl.js"></script>
-<script src="../_js/com/pageobj.js"></script>
-<script src="../_js/com/math.js"></script>
-<script src="../_js/com/window_ctrl.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/time.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/timer_ctrl.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/pageobj.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/math.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/window_ctrl.js"></script>
 
-<script src="../_js/global.js"></script>
-<script src="../_js/_handle_index.js"></script>
+<script src="https://website.koreis-labo.com/_js/global.js"></script>
+<script src="https://website.koreis-labo.com/_js/_handle_samafeald.js"></script>
 
 </head><body onLoad="__handle_PageLoad()"><div id="com_bodyOutline"><div id="com_bodyInline">
 
@@ -162,7 +162,7 @@
 			<div class="com_Menu_Cel com_Menu_Index"><a class="com_Menu_Cel com_Menu_Index" target="_self" title="TOPへ" href="https://website.koreis-labo.com/">
 			INDEX</a></div>
 
-			<div class="com_Menu_Cel com_Menu_Rule"><a class="com_Menu_Cel com_Menu_Rule" target="_blank" title="利用ルール (Usage rules)" href="rules/rule_web.htm">
+			<div class="com_Menu_Cel com_Menu_Rule"><a class="com_Menu_Cel com_Menu_Rule" target="_blank" title="利用ルール (Usage rules)" href="https://website.koreis-labo.com/rules/rule_web.htm">
 			RULES</a></div>
 
 			<div class="com_Menu_Cel_Long">
