--- a/address.htm
+++ b/address.htm
@@ -98,7 +98,7 @@
 	<!-- 列目 -->
 	<tr>
 	<td><a target="_blank" href="https://github.com/korei-xlix/website/issues" title="github">
-		<img src="../_pic/cont/item_mini_0007.jpg" alt="github" />
+		<img src="https://website.koreis-labo.com//_pic/cont/item_mini_0007.jpg" alt="github" />
 		</a></td>
 	<td>
 		<div class="Address">github</div>
@@ -115,7 +115,7 @@
 	<!-- 列目 -->
 	<tr>
 	<td><a target="_blank" href="https://marshmallow-qa.com/6mvka3xsdrt22pe" title="マシュマロ">
-		<img src="../_pic/cont/item_mini_0001.jpg" alt="マシュマロ" />
+		<img src="https://website.koreis-labo.com//_pic/cont/item_mini_0001.jpg" alt="マシュマロ" />
 		</a></td>
 	<td>
 		<div class="Address">マシュマロ（@6mvka3xsdrt22pe）</div>
