--- a/address.htm
+++ b/address.htm
@@ -26,6 +26,7 @@
 
 <script src="https://website.koreis-labo.com/_js/global.js"></script>
 <script src="https://website.koreis-labo.com/_js/_handle_samafeald.js"></script>
+<!-- <script src="https://localhost:8989/_js/_handle_samafeald.js"></script> -->
 
 </head><body onLoad="__handle_PageLoad()"><div id="com_bodyOutline"><div id="com_bodyInline">
 
@@ -65,7 +66,8 @@
 	<div class="com_CSS_Menu" id="iCSSsw">
 	CSS切替: <select name="selectcss" id="iCSSsw_Style" onchange="__handle_SelectCSS();">
 <!--	<option value="galaxyfleet_index" selected>Default</option> -->
-	<option value="default" selected>Default</option>
+	<option value="default">Default</option>
+	<option value="darkred" selected>Darkred</option>
 	</select><div class="com_CSS_Menu_Mode" id="iCSSsw_Mode" >
 	<a class="com_CSS_Mode" title="PC CSS切替" href="javascript:__handle_SelectCSS_Mode('PC');">
 	[PC]</a>
