--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <script src="https://website.koreis-labo.com/_js/global.js"></script>
 <script src="https://website.koreis-labo.com/_js/_handle_samafeald.js"></script>
+<!-- <script src="https://localhost:8989/_js/_handle_samafeald.js"></script> -->
 
 </head><body onLoad="__handle_PageLoad()"><div id="com_bodyOutline"><div id="com_bodyInline">
 
@@ -38,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-22
+				LAST UPDATE：	2023-08-26
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -78,7 +79,8 @@
 	<div class="com_CSS_Menu" id="iCSSsw">
 	CSS切替: <select name="selectcss" id="iCSSsw_Style" onchange="__handle_SelectCSS();">
 <!--	<option value="galaxyfleet_index" selected>Default</option> -->
-	<option value="default" selected>Default</option>
+	<option value="default">Default</option>
+	<option value="darkred" selected>Darkred</option>
 	</select><div class="com_CSS_Menu_Mode" id="iCSSsw_Mode" >
 	<a class="com_CSS_Mode" title="PC CSS切替" href="javascript:__handle_SelectCSS_Mode('PC');">
 	[PC]</a>
@@ -362,6 +364,17 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 		</a></td>
 	<td>
 		Instagram(samafeald)
+		</td>
+	</tr>
+
+	<tr>
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://www.threads.net/@samafeald" title="Threadsアカウント">
+<!--	<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0101.png" alt="Threadsアカウント" /> -->
+		<img src="https://localhost:8989/_pic/cont/item_mini_0101.jpg" alt="Threadsアカウント" />
+		</a></td>
+	<td>
+		Threads(samafeald)<br />
+		【非公開】<br />
 		</td>
 	</tr>
 
