--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-26
+				LAST UPDATE：	2023-08-28
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -321,9 +321,47 @@ githubリポジトリ<br />
 		</li>
 	</ul>
 
+	</td>
+	</tr>
 
 
-<div class="Caution">その他：わたしの置かれてる状況</div>
+
+	<!-- ***登山情報*** -->
+	<tr>
+	<td colspan="2">
+		<div class="com_ContentsTitle">今まで登った山</div>
+<p>
+覚えてる限りで登ったことがある山<br />
+</p>
+
+<ul>
+	<li>谷川岳
+		</li>
+
+	<li>丹沢山<br />
+		塔ノ岳、丹沢山、蛭ヶ岳<br />
+		</li>
+
+	<li>空木岳
+		</li>
+
+	<li>鳳凰三山
+		</li>
+
+	<li>北岳
+		</li>
+
+	</ul>
+
+	</td>
+	</tr>
+
+
+
+	<!-- ***その他*** -->
+	<tr>
+	<td colspan="2">
+		<div class="com_ContentsTitle">現在わたしの置かれてる状況</div>
 <p>
 現在、腎機能の低下（末期の腎不全）と診断され、3週間の入院をし、透析を受けています。<br />
 現在はやや復調し、日常生活にはほぼ影響はないですが、
