プロフィール修正

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-28
+				LAST UPDATE：	2023-08-29
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -392,7 +392,9 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0001.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
-		これーアカウント（@korei_xlix）
+		これーアカウント（@korei_xlix）<br />
+		知り合いのおばさんゲーマー。<br />
+		この人のgithubやサイト管理を手伝ってる。<br />
 		</td>
 	</tr>
 
@@ -401,7 +403,8 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 		<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0011.jpg" alt="Instagramアカウント" />
 		</a></td>
 	<td>
-		Instagram(samafeald)
+		Instagram(samafeald)<br />
+		日常写真をアップする。<br />
 		</td>
 	</tr>
 
@@ -421,7 +424,8 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_1001.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
-		misskey bot
+		misskey bot<br />
+		pythonで作ったbotを公開する、予定！<br />
 		</td>
 	</tr>
 
@@ -430,7 +434,9 @@ korei_xlix の更新も"なぜか"再開されます。<br />
 		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0006.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
-		Galaxy Fleetアカウント（開発中）
+		Galaxy Fleetアカウント（開発中）<br />
+		webでできる宇宙艦隊ストラテジゲーム、らしいよ。<br />
+		Koreiからリポジトリを引き継いで開発してる。<br />
 		</td>
 	</tr>
 
