プロフィール修正
・ツイート内容の追記。

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-08-29
+				LAST UPDATE：	2023-09-24
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -137,9 +137,9 @@ Korei's Laboの管理をおこなってます。<br />
 </p>
 
 <p>
-なおSNSがクソ嫌いです。<br />
-これーの「サーバとかソースをいじれ」という指令で、連絡手段として嫌々SNS登録したほどSNS嫌いです。<br />
-これーとの連絡用にtwitterを取らさ...取りました。<br />
+IT技術の話題について紹介したり、ツイートしたりします。<br />
+その他、日常の出来事や、撮った写真などもアップします。<br />
+プロフみて興味あればフォローをお願いします。<br />
 </p>
 
 
@@ -159,6 +159,9 @@ Korei's Laboの管理をおこなってます。<br />
 		</li>
 
 	<li>c++開発やってる人<br />
+		</li>
+
+	<li>ゲーム開発やってる人<br />
 		</li>
 </ul>
 
