プロフィール修正
・障害者手帳を取得した！

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-09-24
+				LAST UPDATE：	2023-10-21
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -369,10 +369,7 @@ githubリポジトリ<br />
 現在、腎機能の低下（末期の腎不全）と診断され、3週間の入院をし、透析を受けています。<br />
 現在はやや復調し、日常生活にはほぼ影響はないですが、
 歩行や階段の登り降りが普通の人より遥かに遅く、杖をついています。<br />
-お医者からは「障害者認定1級」と診断され、障害者手帳を申請しています。<br />
-<br />
-いちお8/12の退院から必要な手続きや、家のことはできたので、活動としては元に戻れると思います。<br />
-korei_xlix の更新も"なぜか"再開されます。<br />
+お医者からは「障害者認定1級」と診断され、障害者手帳を取得しました。<br />
 <br />
 これからも Korei とともによろしくなー。<br />
 
