プロフィール修正
・フォローについて加筆。

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-10-21
+				LAST UPDATE：	2023-10-29
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -186,7 +186,10 @@ IT技術の話題について紹介したり、ツイートしたりします。
 		（リプライ、DM、引用リツイートの注意事項あり）<br />
 	</li>
 
-	<li>いいねしたらフォローをお願い<br />
+	<li>非フォロワーでいいねしたら、フォローをお願い<br />
+	</li>
+
+	<li>既読扱いのいいね連打は控えて<br />
 	</li>
 
 	<li>スパムは放置<br />
