プロフィール修正
・korei_supの追加。（管理アカウント）

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-10-29
+				LAST UPDATE：	2023-11-3
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -388,6 +388,16 @@ githubリポジトリ<br />
 	<td colspan="2">
 		<div class="com_ContentsTitle">その他のアカウント</div>
 	</td>
+	</tr>
+
+	<tr>
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://website.koreis-labo.com/profile/korei_sup.htm" title="お知らせ用垢">
+		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0007.jpg" alt="Profile Picture" />
+		</a></td>
+	<td>
+		お知らせ用垢<br />
+		Webサイトの更新、X (旧Twitter)の運用状況、その他アプリの開発状況のお知らせなどをおこなう。<br />
+		</td>
 	</tr>
 
 	<tr>
