プロフィール修正
・加筆！w

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ IT技術の話題について紹介したり、ツイートしたりします。
 </p>
 
 <p>
-リプライが苦手、確実に連絡が欲しい場合、匿名のメッセージはマシュマロに送ってください。<br />
+リプライが苦手、確実に連絡が欲しい場合、匿名のメッセージはマシュマロ（"これー"ですがw）に送ってください。<br />
 <a target="_blank" href="../rules/address.htm">
 [連絡先（Address）]</a>
 </p>
