--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-11-3
+				LAST UPDATE：	2023-12-29
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -192,7 +192,8 @@ IT技術の話題について紹介したり、ツイートしたりします。
 	<li>既読扱いのいいね連打は控えて<br />
 	</li>
 
-	<li>スパムは放置<br />
+	<li>スパムはスパムリストで晒し上げる<br />
+		→リストは<a target="_blank" href="https://twitter.com/i/lists/1718364247682679009/members">こちら</a><br />
 		→リンク踏んでも当方は責任を負わない<br />
 	</li>
 
