プロフィール修正
・政治的発言、言論について追記。

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2023-12-29
+				LAST UPDATE：	2024-02-11
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -128,6 +128,7 @@
 <p>
 これーに頼まれて（殴られて）サポートになりました。<br />
 主にサーバの管理、github側のファイル更新、webページの監視管理、これから作るゲームの開発を手伝います。<br />
+たまにトレンドになってる話題、IT系の話題についての言及もおこなうので、苦手な人には向かないと思います。<br />
 </p>
 
 <p>
