プロフィール修正

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-02-11
+				LAST UPDATE：	2024-03-16
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -164,15 +164,15 @@ IT技術の話題について紹介したり、ツイートしたりします。
 
 	<li>ゲーム開発やってる人<br />
 		</li>
+
 </ul>
 
 
 
 <div class="Caution">X (旧Twitter)アカウントへの注意事項</div>
 <p>
-フォロー、リムーブはご自由に。挨拶は不必要です。<br />
-非フォロワーの方でいいねしたら、フォローしてください。<br />
-その他、トラブル回避のために運用ルールに基づいて運用してます。<br />
+当アカウントは、トラブル回避のために運用ルールに基づいて運用してます。<br />
+フォローされた場合、以上にご同意いただけたとみなします。<br />
 <br />
 基本的な運用方針：
 </p>
@@ -193,28 +193,31 @@ IT技術の話題について紹介したり、ツイートしたりします。
 	<li>既読扱いのいいね連打は控えて<br />
 	</li>
 
-	<li>スパムはスパムリストで晒し上げる<br />
-		→リストは<a target="_blank" href="https://twitter.com/i/lists/1718364247682679009/members">こちら</a><br />
+	<li>スパムは放置<br />
 		→リンク踏んでも当方は責任を負わない<br />
 	</li>
 
+	<li>このアカウントについては、企業様のアカウントのフォローはご遠慮ください。<br />
+	</li>
+
+	<li>詳細な運用方針はこちら<br />
+		<a target="_blank" href="../rules/rule_twitter.htm">
+		[X運用方針]</a>
+	</li>
+
+
 </ul>
 
-<p>
-詳細な運用方針はこちら　
-<a target="_blank" href="../rules/rule_twitter.htm">
-[X運用方針]</a>
-</p>
 
-<p>
-フォローされた場合、以上にご同意いただけたとみなします。<br />
-</p>
 
+<div class="Caution">連絡先</div>
 <p>
-リプライが苦手、確実に連絡が欲しい場合、匿名のメッセージはマシュマロ（"これー"ですがw）に送ってください。<br />
+リプライが苦手、確実に連絡が欲しい場合、匿名のメッセージはマシュマロに送ってください。<br />
 <a target="_blank" href="../rules/address.htm">
 [連絡先（Address）]</a>
 </p>
+
+
 
 	</td>
 	</tr>
@@ -225,15 +228,6 @@ IT技術の話題について紹介したり、ツイートしたりします。
 	<tr>
 	<td colspan="2">
 		<div class="com_ContentsTitle">X (旧Twitter)以外のアカウントについて</div>
-
-<p>
-X (旧Twitter)以外のアカウントに送られたメッセージなどはスルーされます。<br />
-X (旧Twitter)のフォローをお願いします。<br />
-<br />
-感想、メッセージなどはXに送ってください。<br />
-その他、運用方針（フォロー、スパムの扱いなど）はX (旧Twitter)の運用方針に準拠します。<br />
-（連絡先、X運用方針は上記「Xのアカウントについて」に記載しています）<br />
-</p>
 
 <p>
 githubリポジトリ<br />
