プロフィール修正

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-03-16
+				LAST UPDATE：	2024-03-22
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -193,11 +193,11 @@ IT技術の話題について紹介したり、ツイートしたりします。
 	<li>既読扱いのいいね連打は控えて<br />
 	</li>
 
-	<li>スパムは放置<br />
-		→リンク踏んでも当方は責任を負わない<br />
+	<li>スパムはフォロー削除<br />
 	</li>
 
-	<li>このアカウントについては、企業様のアカウントのフォローはご遠慮ください。<br />
+	<li>企業様のアカウントのフォローはご遠慮ください。<br />
+		またX上での求人、オファーはお受けしません。<br />
 	</li>
 
 	<li>詳細な運用方針はこちら<br />
@@ -365,13 +365,10 @@ githubリポジトリ<br />
 	<td colspan="2">
 		<div class="com_ContentsTitle">現在わたしの置かれてる状況</div>
 <p>
-現在、腎機能の低下（末期の腎不全）と診断され、3週間の入院をし、透析を受けています。<br />
-現在はやや復調し、日常生活にはほぼ影響はないですが、
-歩行や階段の登り降りが普通の人より遥かに遅く、杖をついています。<br />
-お医者からは「障害者認定1級」と診断され、障害者手帳を取得しました。<br />
-<br />
-これからも Korei とともによろしくなー。<br />
-
+現在、腎機能の低下（末期の腎不全）、低カルシウム血症と診断され、2023年7月から透析を開始。「障害者認定1級」を取得しました。<br />
+2024年3月現在も復職できず、治療や検査、透析を行ってます。
+カルシウム低下や、透析の影響で、めまいや腰痛、時々脈異常、体の攣りなど、様々な症状がでてます。（結構重症みたいです）<br />
+ゲームやパソコンはできますが、3Dゲームなどはモノによっては酔ってしまうので長時間はできません。<br />
 </p>
 
 	</td>
