プロフィール修正

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-03-22
+				LAST UPDATE：	2024-03-23
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -126,8 +126,7 @@
 
 <div class="Caution">自己紹介</div>
 <p>
-これーに頼まれて（殴られて）サポートになりました。<br />
-主にサーバの管理、github側のファイル更新、webページの監視管理、これから作るゲームの開発を手伝います。<br />
+サーバの管理、github側のファイル更新、webページの監視管理、これから作るゲームの開発をおこなってます。<br />
 たまにトレンドになってる話題、IT系の話題についての言及もおこなうので、苦手な人には向かないと思います。<br />
 </p>
 
@@ -194,6 +193,7 @@ IT技術の話題について紹介したり、ツイートしたりします。
 	</li>
 
 	<li>スパムはフォロー削除<br />
+		リツイートしかしてないアカウントもスパムとみなす！<br />
 	</li>
 
 	<li>企業様のアカウントのフォローはご遠慮ください。<br />
