プロフィール修正
・Threadのアイコンリンクの誤り修正。

--- a/index.html
+++ b/index.html
@@ -416,8 +416,7 @@ githubリポジトリ<br />
 
 	<tr>
 	<td class="com_Center"><a class="Icon" target="_blank" href="https://www.threads.net/@samafeald" title="Threadsアカウント">
-<!--	<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0101.png" alt="Threadsアカウント" /> -->
-		<img src="https://localhost:8989/_pic/cont/item_mini_0101.jpg" alt="Threadsアカウント" />
+		<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0101.jpg" alt="Threadsアカウント" />
 		</a></td>
 	<td>
 		Threads(samafeald)<br />
