--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
 <title>profile: @samafeald</title>
 <meta name="description" content="samafealdのプロフィールページです。">
 
-<script src="https://website.koreis-labo.com/_js/_handle_samafeald.js"></script>
-<script src="https://website.koreis-labo.com/_js/global.js"></script>
-
 <script src="https://website.koreis-labo.com/_js/com/log.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/path.js"></script>
-
-<script src="https://website.koreis-labo.com/_js/com/time.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/timer_ctrl.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/pageobj.js"></script>
-<script src="https://website.koreis-labo.com/_js/com/math.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/storage.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/systemif.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/file_ctrl.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/osif.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/sel_ctrl.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/window_ctrl.js"></script>
+
+<script src="https://website.koreis-labo.com/_js/_handle_index.js"></script>
+<script src="https://website.koreis-labo.com/_js/global.js"></script>
 
 </head><body onLoad="__handle_PageLoad()"><div id="com_bodyOutline"><div id="com_bodyInline">
 
@@ -71,7 +70,7 @@
 		<span class="com_Menu_Select">
 		【@samafeald】</span>
 
-		<a class="com_Menu_Cel" target="_blank" title="X" href="https://twitter.com/samafeald">
+		<a class="com_Menu_Cel" target="_blank" title="X" href="https://x.com/samafeald">
 		[X]</a>
 
 	</div>
@@ -94,7 +93,7 @@
 <a name="aMain" class="com_AnchorTag"></a>
 <main class="com_ContentsSection_Center">
 	<div class="com_ContentsTitle">
-		<a class="com_ContentsTitle_Bunner" target="_blank" href="https://twitter.com/samafeald" title="X">
+		<a class="com_ContentsTitle_Bunner" target="_blank" href="https://x.com/samafeald" title="X">
 		@samafeald
 		</a></div>
 
@@ -108,7 +107,7 @@
 
 	<!-- ***アイコン*** -->
 	<tr>
-	<td class="com_Center" colspan="2"><a class="Icon" target="_blank" href="https://twitter.com/samafeald" title="X">
+	<td class="com_Center" colspan="2"><a class="Icon" target="_blank" href="https://x.com/samafeald" title="X">
 		<img src="https://website.koreis-labo.com//_pic/profile/icon_mini_1000.jpg" alt="Profile Picture" />
 		</a></td>
 	</tr>
@@ -258,27 +257,27 @@ githubリポジトリ<br />
 		<div class="com_ContentsTitle">Twitterタグ</div>
 
 	<ul>
-<!--<li><a target="_blank" href="https://twitter.com/hashtag/samafeald?src=hashtag_click">#samafeald</a>
+<!--<li><a target="_blank" href="https://x.com/hashtag/samafeald?src=hashtag_click">#samafeald</a>
 		☆ハイライト用
 		</li>	//-->
 
-	<li><a target="_blank" href="https://twitter.com/hashtag/korei_web?src=hashtag_click">#korei_web</a>
+	<li><a target="_blank" href="https://x.com/hashtag/korei_web?src=hashtag_click">#korei_web</a>
 		☆Web、アカウント運用、お知らせ
 		</li>
 
-	<li><a target="_blank" href="https://twitter.com/hashtag/korei_dev?src=hashtag_click">#korei_dev</a>
+	<li><a target="_blank" href="https://x.com/hashtag/korei_dev?src=hashtag_click">#korei_dev</a>
 		☆開発用
 		</li>
 
-	<li><a target="_blank" href="https://twitter.com/hashtag/galaxy_fleet?src=hashtag_click">#galaxy_fleet</a>
+	<li><a target="_blank" href="https://x.com/hashtag/galaxy_fleet?src=hashtag_click">#galaxy_fleet</a>
 		Galaxy Fleetの広報、お知らせツイート
 		</li>
 
-	<li><a target="_blank" href="https://twitter.com/hashtag/sama_rep?src=hashtag_click">#sama_rep</a>
+	<li><a target="_blank" href="https://x.com/hashtag/sama_rep?src=hashtag_click">#sama_rep</a>
 		★リプライ（後で消すかも）
 		</li>
 
-	<li><a target="_blank" href="https://twitter.com/hashtag/sama_del?src=hashtag_click">#sama_del</a>
+	<li><a target="_blank" href="https://x.com/hashtag/sama_del?src=hashtag_click">#sama_del</a>
 		★あとで消すツイート
 		</li>
 
@@ -442,7 +441,7 @@ githubリポジトリ<br />
 	</tr>
 
 	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://twitter.com/galaxy_fleet" title="Galaxy Fleet (開発中)">
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://x.com/galaxy_fleet" title="Galaxy Fleet (開発中)">
 		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0006.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
@@ -476,7 +475,7 @@ githubリポジトリ<br />
 	<a class="com_Menu_Cel" target="_blank" title="Web Page" href="https://website.koreis-labo.com/">
 	[Korei's Labo]</a>
 
-	<a class="com_Menu_Cel" target="_blank" title="for auther X" href="https://twitter.com/korei_xlix">
+	<a class="com_Menu_Cel" target="_blank" title="for auther X" href="https://x.com/korei_xlix">
 	[X (Korei)]</a>
 
 	</div>
@@ -504,7 +503,7 @@ githubリポジトリ<br />
 
 			<!-- コンテンツのtwitter -->
 			<!--
-			<div class="com_Menu_Cel com_Menu_Twitter"><a class="com_Menu_Cel com_Menu_Twitter"  target="_blank" title="for Twitter" href="https://twitter.com/korei_xlix">
+			<div class="com_Menu_Cel com_Menu_Twitter"><a class="com_Menu_Cel com_Menu_Twitter"  target="_blank" title="for Twitter" href="https://x.com/korei_xlix">
 			Twitter</a></div>
 			//-->
 
@@ -523,7 +522,7 @@ githubリポジトリ<br />
 
 		<div class="com_Menu_TwitterFT">
 			<address>X (auther): 
-			<a class="com_Menu_TwitterFT" target="_blank" title="for X" href="https://twitter.com/korei_xlix">
+			<a class="com_Menu_TwitterFT" target="_blank" title="for X" href="https://x.com/korei_xlix">
 			korei_xlix@twitter.com</a></address>
 		</div>
 
