--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 <script src="https://website.koreis-labo.com/_js/com/systemif.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/file_ctrl.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/osif.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/timer_ctrl.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/sel_ctrl.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/window_ctrl.js"></script>
 
-<script src="https://website.koreis-labo.com/_js/_handle_index.js"></script>
+<script src="https://website.koreis-labo.com/_js/_handle_samafeald.js"></script>
 <script src="https://website.koreis-labo.com/_js/global.js"></script>
+
 
 </head><body onLoad="__handle_PageLoad()"><div id="com_bodyOutline"><div id="com_bodyInline">
 
@@ -53,6 +55,7 @@
 
 	<div class="com_Corp">
 		Copyright 2023 Korei's Labo<br />
+		<span id="iSystemTD"></span><br />
 	</div>
 
 <br class="com_End" /></div>
