--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-05-01
+				LAST UPDATE：	2024-05-29
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -209,7 +209,7 @@ IT技術の話題について紹介したり、ツイートしたりします。
 		</li>
 
 	<li>詳細な運用方針はこちら<br />
-		<a target="_blank" href="../rules/rule_twitter.htm">
+		<a target="_blank" href="https://website.koreis-labo.com/rules/rule_twitter.htm">
 		[X運用方針]</a>
 		</li>
 </ul>
@@ -222,8 +222,7 @@ IT技術の話題について紹介したり、ツイートしたりします。
 
 <p>
 リプライが苦手、確実に連絡が欲しい場合、匿名のメッセージはマシュマロに送ってください。<br />
-<a target="_blank" href="../rules/address.htm">
-[連絡先（Address）]</a>
+	<a target="_blank" href="https://website.koreis-labo.com/rules/contact.htm">[連絡先（Contact）]</a>
 </p>
 
 
@@ -493,31 +492,22 @@ githubリポジトリ<br />
 
 	<div class="com_Menu">
 
-		<div class="com_Title" id="iTitleDw">aaa
+		<div class="com_Title" id="iTitleDw">
 		</div>
 
 		<div class="com_Menu_Buttons">
 
-			<div class="com_Menu_Cel com_Menu_Index"><a class="com_Menu_Cel com_Menu_Index" target="_self" title="TOPへ" href="https://website.koreis-labo.com/">
+			<div class="com_Menu_Cel com_Menu_Index"><a class="com_Menu_Cel com_Menu_Index"  target="_blank" title="サイトTOP (Site Index)" href="https://website.koreis-labo.com/">
 			INDEX</a></div>
 
-			<div class="com_Menu_Cel com_Menu_Rule"><a class="com_Menu_Cel com_Menu_Rule" target="_blank" title="利用ルール (Usage rules)" href="https://website.koreis-labo.com/rules/rule_web.htm">
-			RULES</a></div>
+			<div class="com_Menu_Cel com_Menu_Rule"><a class="com_Menu_Cel com_Menu_Rule" target="_blank" title="利用規約 (Therms)" href="https://website.koreis-labo.com/rules/rule_web.htm">
+			THERMS</a></div>
 
-			<!-- コンテンツのtwitter -->
-			<!--
-			<div class="com_Menu_Cel com_Menu_Twitter"><a class="com_Menu_Cel com_Menu_Twitter"  target="_blank" title="for Twitter" href="https://x.com/korei_xlix">
-			Twitter</a></div>
-			//-->
+			<div class="com_Menu_Cel com_Menu_Github"><a class="com_Menu_Cel com_Menu_Github"  target="_blank" title="We Labo's Github" href="https://github.com/korei-xlix">
+			GITHUB</a></div>
 
-			<div class="com_Menu_Cel com_Menu_Github"><a class="com_Menu_Cel com_Menu_Github"  target="_blank" title="開発Github (for Github)" href="https://github.com/korei-xlix">
-			Github</a></div>
-
-			<div class="com_Menu_Cel com_Menu_Address"><a class="com_Menu_Cel com_Menu_Address"  target="_blank" title="連絡先（for Address）" href="address.htm">
-			Address</a></div>
-
-			<div class="com_Menu_Cel com_Menu_Warnlist"><a class="com_Menu_Cel com_Menu_Warnlist" target="_blank" title="警告リスト（warn list）" href="https://github.com/korei-xlix/warnlists/blob/main/list_twitter.md">
-			Warnlist</a></div>
+			<div class="com_Menu_Cel com_Menu_Contact"><a class="com_Menu_Cel com_Menu_Contact"  target="_blank" title="連絡先（Contact）" href="https://website.koreis-labo.com/rules/contact.htm">
+			CONTACT</a></div>
 
 			<br class="com_Menu_End" />
 
