アカウント変更
・korei_supをkorei_opeに変更。

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-06-03
+				LAST UPDATE：	2024-06-30
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -392,7 +392,7 @@ githubリポジトリ<br />
 	</tr>
 
 	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://website.koreis-labo.com/profile/korei_sup.htm" title="お知らせ用垢">
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://website.koreis-labo.com/profile/korei_ope.htm" title="お知らせ用垢">
 		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0007.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
@@ -503,7 +503,7 @@ githubリポジトリ<br />
 			<div class="com_Menu_Cel com_Menu_Rule"><a class="com_Menu_Cel com_Menu_Rule" target="_blank" title="利用規約 (Therms)" href="https://website.koreis-labo.com/rules/rule_web.htm">
 			THERMS</a></div>
 
-			<div class="com_Menu_Cel com_Menu_X_Pub"><a class="com_Menu_Cel com_Menu_X_Pub"  target="_blank" title="for Public X" href="https://website.koreis-labo.com/profile/korei_sup.htm">
+			<div class="com_Menu_Cel com_Menu_X_Pub"><a class="com_Menu_Cel com_Menu_X_Pub"  target="_blank" title="for Public X" href="https://website.koreis-labo.com/profile/korei_ope.htm">
 			PUBLIC</a></div>
 
 			<div class="com_Menu_Cel com_Menu_Github"><a class="com_Menu_Cel com_Menu_Github"  target="_blank" title="We Labo's Github" href="https://github.com/korei-xlix">
