プロフィール修正
・タグ修正。

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-06-30
+				LAST UPDATE：	2024-06-25
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -259,27 +259,23 @@ githubリポジトリ<br />
 		<div class="com_ContentsTitle">Twitterタグ</div>
 
 	<ul>
-<!--<li><a target="_blank" href="https://x.com/hashtag/samafeald?src=hashtag_click">#samafeald</a>
-		☆ハイライト用
-		</li>	//-->
-
-	<li><a target="_blank" href="https://x.com/hashtag/korei_web?src=hashtag_click">#korei_web</a>
+	<li><a target="_blank" href="https://x.com/search?q=%23koreiweb+lang%3Ajp+&src=typed_query&f=live">#koreiweb</a>
 		☆Web、アカウント運用、お知らせ
 		</li>
 
-	<li><a target="_blank" href="https://x.com/hashtag/korei_dev?src=hashtag_click">#korei_dev</a>
+	<li><a target="_blank" href="https://x.com/search?q=%23koreidev+lang%3Ajp+&src=typed_query&f=live">#koreidev</a>
 		☆開発用
 		</li>
 
-	<li><a target="_blank" href="https://x.com/hashtag/galaxy_fleet?src=hashtag_click">#galaxy_fleet</a>
+	<li><a target="_blank" href="https://x.com/search?q=%23galaxyfleet+lang%3Ajp+&src=typed_query&f=live">#galaxyfleet</a>
 		Galaxy Fleetの広報、お知らせツイート
 		</li>
 
-	<li><a target="_blank" href="https://x.com/hashtag/sama_rep?src=hashtag_click">#sama_rep</a>
+	<li><a target="_blank" href="https://x.com/search?q=%23samarep+lang%3Ajp+&src=typed_query&f=live">#samarep</a>
 		★リプライ（後で消すかも）
 		</li>
 
-	<li><a target="_blank" href="https://x.com/hashtag/sama_del?src=hashtag_click">#sama_del</a>
+	<li><a target="_blank" href="https://x.com/search?q=%23samarep+lang%3Ajp+&src=typed_query&f=live">#samadel</a>
 		★あとで消すツイート
 		</li>
 
