--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <script src="https://website.koreis-labo.com/_js/com/osif.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/timer_ctrl.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/sel_ctrl.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/button_ctrl.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/popup_ctrl.js"></script>
+<script src="https://website.koreis-labo.com/_js/com/frame_ctrl.js"></script>
 <script src="https://website.koreis-labo.com/_js/com/window_ctrl.js"></script>
 
 <script src="https://website.koreis-labo.com/_js/_handle_samafeald.js"></script>
