プロフィール修正
・Instagramアカウントを削除。
・Blue Skyアカウントを追加。

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-06-25
+				LAST UPDATE：	2024-07-23
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -412,11 +412,11 @@ githubリポジトリ<br />
 	</tr>
 
 	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://www.instagram.com/samafeald/" title="Instagramアカウント">
-		<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0011.jpg" alt="Instagramアカウント" />
+	<td class="com_Center"><a class="Icon" target="_blank" href="https://bsky.app/profile/samafeald.bsky.social" title="Blue Skyアカウント">
+		<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0012.jpg" alt="Instagramアカウント" />
 		</a></td>
 	<td>
-		Instagram(samafeald)<br />
+		Blue Sky(samafeald)<br />
 		日常写真をアップする。<br />
 		</td>
 	</tr>
