プロフィール修正
・Xアカウント放棄（後に削除）

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-07-25
+				LAST UPDATE：	2024-08-09
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -76,8 +76,8 @@
 		<span class="com_Menu_Select">
 		【@samafeald】</span>
 
-		<a class="com_Menu_Cel" target="_blank" title="X" href="https://x.com/samafeald">
-		[X]</a>
+		<a class="com_Menu_Cel" target="_blank" title="BlueSky" href="https://bsky.app/profile/samafeald.bsky.social">
+		[BlueSky]</a>
 
 	</div>
 
@@ -99,7 +99,7 @@
 <a name="aMain" class="com_AnchorTag"></a>
 <main class="com_ContentsSection_Center">
 	<div class="com_ContentsTitle">
-		<a class="com_ContentsTitle_Bunner" target="_blank" href="https://x.com/samafeald" title="X">
+		<a class="com_ContentsTitle_Bunner" target="_blank" href="https://bsky.app/profile/samafeald.bsky.social" title="BlueSky">
 		@samafeald
 		</a></div>
 
@@ -113,7 +113,7 @@
 
 	<!-- ***アイコン*** -->
 	<tr>
-	<td class="com_Center" colspan="2"><a class="Icon" target="_blank" href="https://x.com/samafeald" title="X">
+	<td class="com_Center" colspan="2"><a class="Icon" target="_blank" href="https://bsky.app/profile/samafeald.bsky.social" title="BlueSky">
 		<img src="https://website.koreis-labo.com//_pic/profile/icon_mini_1000.jpg" alt="Profile Picture" />
 		</a></td>
 	</tr>
