プロフィール修正
・アカウント整理。

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-08-09
+				LAST UPDATE：	2024-10-19
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -391,48 +391,16 @@ githubリポジトリ<br />
 	</tr>
 
 	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://website.koreis-labo.com/profile/korei_ope.htm" title="お知らせ用垢">
-		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0007.jpg" alt="Profile Picture" />
-		</a></td>
-	<td>
-		お知らせ用垢<br />
-		Webサイトの更新、X (旧Twitter)の運用状況、その他アプリの開発状況のお知らせなどをおこなう。<br />
-		</td>
-	</tr>
-
-	<tr>
 	<td class="com_Center"><a class="Icon" target="_blank" href="https://website.koreis-labo.com/profile/korei_xlix.htm" title="これーアカウント（@korei_xlix）">
 		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0001.jpg" alt="Profile Picture" />
 		</a></td>
 	<td>
+		【黒幕のアカウント：X】<br />
 		これーアカウント（@korei_xlix）<br />
 		知り合いのおばさんゲーマー。<br />
 		この人のgithubやサイト管理を手伝ってる。<br />
 		</td>
 	</tr>
-
-	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://bsky.app/profile/samafeald.bsky.social" title="Blue Skyアカウント">
-		<img src="https://website.koreis-labo.com/_pic/cont/item_mini_0012.jpg" alt="Instagramアカウント" />
-		</a></td>
-	<td>
-		Blue Sky(samafeald)<br />
-		日常写真をアップする。<br />
-		</td>
-	</tr>
-
-	<tr>
-	<td class="com_Center"><a class="Icon" target="_blank" href="https://x.com/galaxy_fleet" title="Galaxy Fleet (開発中)">
-		<img src="https://website.koreis-labo.com/_pic/profile/icon_mini_0006.jpg" alt="Profile Picture" />
-		</a></td>
-	<td>
-		Galaxy Fleetアカウント（開発中）<br />
-		webでできる宇宙艦隊ストラテジゲーム、らしいよ。<br />
-		Koreiからリポジトリを引き継いで開発してる。<br />
-		</td>
-	</tr>
-
-
 
 	</table>
 
