プロフィール修正

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<div class="com_Update">
 			<div class="com_UpdateDate" id="iUpdateDate">
-				LAST UPDATE：	2024-10-19
+				LAST UPDATE：	2024-11-3
 			</div>
 			<div class="com_UpdateIcon">
 				<img class="com_UpdateIcon_Img" id="iUpdateIcon" src="dummy.jpg" alt="更新されてます" />
@@ -399,6 +399,7 @@ githubリポジトリ<br />
 		これーアカウント（@korei_xlix）<br />
 		知り合いのおばさんゲーマー。<br />
 		この人のgithubやサイト管理を手伝ってる。<br />
+		開発の仕様はこっちがメインです。（俺じゃねえ！w）<br />
 		</td>
 	</tr>
 
